New Drivetrain openloop and position controllers (#128)
* mbs and execptions

changed to std::runtime_error

ros controllers

ros controllers

first

removed custom diff drive

* add getLoggerName to uwrt_mars_rover_utils to retrieve logger name from controller namespaces.

* add diff_drive_voltage_controller

* hook up open loop controller

* get rid of the generalized comm interface since non-canopen roboteq support was dropped

* fix bugs discovered from testing controller

* Add and hookup position controller

* fix catkin_lint and install build issues

* add catkin_lint config file

* fix clang-tidy errors

* fix catkin-lint config typo

* add missing controller in load list

Co-authored-by: akeaveny <akeaveny@uwaterloo.ca>

--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
         joint_limits_interface
         roscpp
         transmission_interface
+        uwrt_mars_rover_hw
         uwrt_mars_rover_utils
         )
 
@@ -21,6 +22,7 @@ catkin_package(
         joint_limits_interface
         roscpp
         transmission_interface
+        uwrt_mars_rover_hw
         uwrt_mars_rover_utils
 )
 
@@ -49,13 +51,16 @@ install(TARGETS
         RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
         )
 
-install(DIRECTORY
-        drivers/roboteq_driver/include/
-        include/${PROJECT_NAME}/
+install(DIRECTORY include/${PROJECT_NAME}/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
         FILES_MATCHING
         PATTERN "*.h"
         PATTERN "*.hpp"
+        PATTERN ".svn" EXCLUDE
+        )
+
+install(DIRECTORY drivers/roboteq_driver/include/
+        DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}
         PATTERN ".svn" EXCLUDE
         )
 
