--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -15,6 +15,8 @@
     <depend>hardware_interface</depend>
     <depend>joint_limits_interface</depend>
     <depend>transmission_interface</depend>
+
+    <depend>uwrt_mars_rover_hw</depend>
     <depend>uwrt_mars_rover_utils</depend>
 
     <export>
