--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_msgs/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_msgs/package.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0"?>
-<package format="2">
-    <name>uwrt_mars_rover_msgs</name>
+<package format="3">
+    <name>uwrt_mars_rover_drivetrain_msgs</name>
     <version>0.0.0</version>
 
-    <description>Package containing all generic custom msgs that are designed to be used in more than one subsystem
-    </description>
+    <description>Package containing all custom msgs used within the uwrt_mars_rover metapackage</description>
 
     <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>
+
+    <author email="akeaveny@uwaterloo.ca">Aidan Keaveny</author>
 
     <license>MIT</license>
 
     <buildtool_depend>catkin</buildtool_depend>
 
     <depend>std_msgs</depend>
+    <depend>geometry_msgs</depend>
 
     <build_depend>message_generation</build_depend>
 
