--- a/uwrt_mars_rover_msgs/package.xml
+++ b/uwrt_mars_rover_msgs/package.xml
@@ -14,8 +14,9 @@
 
     <depend>std_msgs</depend>
 
-    <build_depend>message_generation</build_depend>
-
-    <exec_depend>message_runtime</exec_depend>
+    <depend>message_generation</depend>
+    <depend>actionlib_msgs</depend>
+    <depend>sensor_msgs</depend>
+    <depend>message_runtime</depend>
 
 </package>
