--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_autonomy/package.xml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_autonomy/package.xml
@@ -14,6 +14,7 @@
     <exec_depend>uwrt_mars_rover_ar_tracker</exec_depend>
     <exec_depend>uwrt_mars_rover_autonomy_controllers</exec_depend>
     <exec_depend>uwrt_mars_rover_localization</exec_depend>
+    <exec_depend>uwrt_mars_rover_drive_to_ar</exec_depend>
 
     <export>
         <metapackage/>
