--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_localization/package.xml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_localization/package.xml
@@ -11,6 +11,13 @@
 
     <buildtool_depend>catkin</buildtool_depend>
 
+    <depend>tf2_ros</depend>
+    <depend>geometry_msgs</depend>
+    <depend>nav_msgs</depend>
+    <depend>uwrt_mars_rover_utils</depend>
+    <depend>tf2_geometry_msgs</depend>
+    <depend>tf2</depend>
+
     <exec_depend>vectornav</exec_depend>
 
 </package>
