--- a/uwrt_mars_rover_autonomy/uwrt_mars_rover_gps/drive_to_gps/package.xml
+++ b/uwrt_mars_rover_autonomy/uwrt_mars_rover_gps/drive_to_gps/package.xml
@@ -20,6 +20,7 @@
   <depend>actionlib</depend>
   <depend>uwrt_mars_rover_msgs</depend>
   <depend>uwrt_mars_rover_utils</depend>
+  <depend>gazebo_ros</depend>
 
   <export>
 
