--- a/uwrt_mars_rover_bringup/CMakeLists.txt
+++ b/uwrt_mars_rover_bringup/CMakeLists.txt
@@ -8,3 +8,7 @@ catkin_package()
 install(DIRECTORY launch
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
         )
+
+install(DIRECTORY scripts
+        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+        )
