--- a/uwrt_mars_rover_bringup/CMakeLists.txt
+++ b/uwrt_mars_rover_bringup/CMakeLists.txt
@@ -9,6 +9,8 @@ install(DIRECTORY launch
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
         )
 
-install(DIRECTORY scripts
-        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+install(PROGRAMS
+        scripts/bringup_can.sh
+        scripts/bringup_fake_can.sh
+        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/scripts
         )
