User/wmmc88/cherry pick sar changes (#145)
* PORT THIS BACK TO MASTER: ADD DUMMY EFFORT STATES FOR TRANSMISSION INTERFACE

* PORT THIS BACK TO MASTER: FIX ALWAYS RETURNING FALSE ON ROBOTEQ CANOPEN COMMAND

* PORT THIS BACK TO MASTER: ADD CAN BRINGUP SCRIPTS

* PORT THIS BACK TO MASTER: PREVENT HANG ON ROBOTEQ READ & PREVENT CRASH ON ROBOTEQ RUNTIME ERRORS

* fix designated initializer compilation

--- a/uwrt_mars_rover_bringup/CMakeLists.txt
+++ b/uwrt_mars_rover_bringup/CMakeLists.txt
@@ -8,3 +8,9 @@ catkin_package()
 install(DIRECTORY launch
         DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
         )
+
+install(PROGRAMS
+        scripts/bringup_can.sh
+        scripts/bringup_fake_can.sh
+        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/scripts
+        )
