ROS2 CI Development Commit   *clang-tidy   *xmllint   *clang-format   *flake8   *cppcheck   *ASan Sanitizer   *Builds on Ubuntu-20.04   *Does not support windows - who even uses that   *All it needs is the ARM64 build     - Template/rough draft of how the ARM64 CI job       should look like towards the bottom of the       .github/ci.yaml   *ARM64 Build CI Development still in progress   *FINALLY!!!!!

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,17 @@ devel_isolated/
 /cfg/cpp/
 /cfg/*.py
 
-#ignore IDE config files
-.vscode/
-.ycm_extra_configs.py 
+#ignore colcon build dirs
+build/uwrt_mars_rover
+build/COLCON_IGNORE
+build/.built_by
+log/
+install/*.sh 
+install/*.zsh
+install/*.py
+install/*.bash
+install/*.ps1
+install/* 
 
 # Ignore generated docs
 *.dox
