--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>uwrt_mars_rover</name>
+  <name>uwrt_mars_rover_drivetrain_hw</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="omarmon@uwaterloo.ca">niiquaye</maintainer>
@@ -9,13 +9,10 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>rclcpp</build_depend>
-
-  <build_depend>uwrt_mars_rover_description</build_depend>
-  <build_depend>uwrt_mars_rover_drivetrain</build_depend>
-
-  <exec_depend>uwrt_mars_rover_description</exec_depend>
-  <exec_depend>uwrt_mars_rover_drivetrain</exec_depend>
+  <depend>hardware_interface</depend>
+  <depend>transmission_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>rclcpp</depend>
 
   <test_depend>ament_cmake_cppcheck</test_depend>
   <test_depend>ament_clang_tidy</test_depend>
