ROS2 Drivetrain Description

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       with:
         distribution: rolling
         linter: ${{ matrix.linter }}
-        package-name: uwrt_mars_rover
+        package-name: uwrt_mars_rover uwrt_mars_rover_description
 
 
   # Tests on AMD64:
@@ -70,7 +70,7 @@ jobs:
           }
         colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/3e627e0fa30db85aea05a50e2c61a9832664d236/index.yaml
         target-ros2-distro: foxy
-        package-name: uwrt_mars_rover
+        package-name: uwrt_mars_rover uwrt_mars_rover_description
 
 ################################ ARM BUILD CI DEVELOPMENT ##################################
 
