--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
@@ -10,6 +10,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>uwrt_mars_rover_drivetrain_hw</build_depend>
+  <build_depend>uwrt_mars_rover_drivetrain_description</build_depend>
+
   
   <exec_depend>uwrt_mars_rover_drivetrain_hw</exec_depend>
 
