--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,4 +103,4 @@ jobs:
           colcon build --event-handlers console_cohesion+;
           colcon test --event-handlers console_cohesion+"
 
-# todo: distro matrix, windows build, global packages list
+# TODO(melvin): distro matrix, windows build, global packages list
