--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,9 @@ on:
   schedule: # Trigger a job on master at midnight UTC every day
     - cron: '0 0 * * *'
 
+env: 
+  ROS_DISTRO: foxy
+
 jobs:
   linters:
     name: ament-${{ matrix.linter }}
@@ -20,7 +23,7 @@ jobs:
       fail-fast: false # We want all the linters to run even if one fails
       matrix:
         linter: [flake8, clang-format, xmllint]
-        # , clang-format, xmllint, cppcheck
+        # , clang-format, xmllint, cppcheck TODO FIX
         #   - flake8       (python linter)
         #   - clang-format (code format checking)
         #   - xmllint      (xml linter)
@@ -38,19 +41,18 @@ jobs:
           package-name: uwrt_mars_rover
 
 
-  amd64-build:
+  linux-amd64-build-and-test:
     runs-on: ubuntu-latest
     container:
       image: rostooling/setup-ros-docker:ubuntu-focal-ros-foxy-ros-base-latest
       options: -u root
-    steps:
 
+    steps:
       - name: Install clang-tidy-6
         run: |
           sudo apt-get update -y
           sudo apt-get install -y clang-tidy-6.0
 
-      
       - name: Build ROS2 Packages and Run Tests
         uses: ros-tooling/action-ros-ci@v0.2
         with:
@@ -61,19 +63,18 @@ jobs:
               }
             }
           colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/3e627e0fa30db85aea05a50e2c61a9832664d236/index.yaml
-          target-ros2-distro: foxy
+          target-ros2-distro: ${{ env.ROS_DISTRO }}
           package-name: uwrt_mars_rover
 
 
-  arm64-build:
+  linux-arm64-build-and-test:
     runs-on: ubuntu-latest
 
     # Cannot use action-ros-ci since cant trigger action steps from within the docker container. Must use `docker exec`
     # to run actions within docker container since we cannot directly use arm64v8/ros:foxy container because there
-    # exists no way of setting up Docker to work with Qemu before loading a docker image onto the runner.
+    # exists no way of setting up Docker to work with Qemu before loading a docker image onto the Github Action runner.
     # Possibly resolveable with https://github.com/actions/runner/issues/320
     steps:
-
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -90,12 +91,12 @@ jobs:
 
       - name: Start ARM64 ROS2 Container
         run: |
-          docker run --name arm64-ros --mount type=bind,source=$(pwd),target=/rosws/src/$(basename $(pwd)) --workdir /rosws --detach -i --rm arm64v8/ros:foxy
+          docker run --name arm64-ros --mount type=bind,source=$(pwd),target=/rosws/src/$(basename $(pwd)) --workdir /rosws --detach -i --rm arm64v8/ros:${{ env.ROS_DISTRO }}
 
       - name: Install ROS Package Dependencies
         run: |
           docker exec arm64-ros sudo apt update
-          docker exec arm64-ros rosdep install -r --from-paths . --ignore-src --rosdistro foxy -y
+          docker exec arm64-ros rosdep install -r --from-paths . --ignore-src --rosdistro ${{ env.ROS_DISTRO }} -y
 
       - name: Build ROS2 Packages and Run Tests
         run: >
@@ -103,4 +104,20 @@ jobs:
           colcon build --event-handlers console_cohesion+;
           colcon test --event-handlers console_cohesion+"
 
-# TODO(melvin): distro matrix, windows build, global packages list
+  windows-amd64-build-and-test: # No rostooling/setup-ros-docker docker images available for Windows.
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Setup ROS
+        uses: ros-tooling/setup-ros@v0.2
+        with:
+          required-ros-distributions: ${{ env.ROS_DISTRO }}
+
+      - name: Build ROS2 Packages and Run Tests
+        uses: ros-tooling/action-ros-ci@v0.2
+        with:
+          package-name: uwrt_mars_rover
+          target-ros2-distro: ${{ env.ROS_DISTRO }}
