--- a/uwrt_mars_rover/package.xml
+++ b/uwrt_mars_rover/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="omarmon@uwaterloo.ca">niiquaye</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
@@ -18,7 +18,6 @@
   <exec_depend>uwrt_mars_rover_drivetrain</exec_depend>
 
   <test_depend>ament_cmake_cppcheck</test_depend>
-  <test_depend>ament_clang_tidy</test_depend>
   <test_depend>ament_cmake_clang_tidy</test_depend>
   <test_depend>ament_cmake_clang_format</test_depend>
   <test_depend>ament_cmake_flake8</test_depend>
