--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     name: ament-${{ matrix.linter }}
     runs-on: ubuntu-latest
     container:
-      image: rostooling/setup-ros-docker:ubuntu-focal-ros-foxy-ros-base-latest
+      image: rostooling/setup-ros-docker:ubuntu-focal-ros-${{ env.ROS_DISTRO }}-ros-desktop-latest
       options: -u root
     strategy:
       fail-fast: false # We want all the linters to run even if one fails
@@ -39,7 +39,7 @@ jobs:
   linux-amd64-build-and-test:
     runs-on: ubuntu-latest
     container:
-      image: rostooling/setup-ros-docker:ubuntu-focal-ros-foxy-ros-base-latest
+      image: rostooling/setup-ros-docker:ubuntu-focal-ros-${{ env.ROS_DISTRO }}-ros-desktop-latest
       options: -u root
 
     steps:
@@ -90,7 +90,7 @@ jobs:
 
       - name: Build ROS2 Packages and Run Tests
         run: >
-          docker exec arm64-ros bash -c "source /opt/ros/foxy/setup.bash;
+          docker exec arm64-ros bash -c "source /opt/ros/${{ env.ROS_DISTRO }}/setup.bash;
           colcon build --event-handlers console_cohesion+;
           colcon test --return-code-on-test-failure --event-handlers console_cohesion+"
 
