--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,8 +91,7 @@ jobs:
 
       - name: Install ROS Source Dependencies
         run: |
-          docker exec arm64-ros cd uwrt_mars_rover
-          docker exec arm64-ros vcs import --input upstream_dependencies.repos
+          docker exec arm64-ros --workdir vcs import --input upstream_dependencies.repos
 
       - name: Install ROS Binary Package Dependencies
         run: |
